feat: Refactoring backend codes.
Updated codes to .NET 8.
Moved all parameters class to dtos.
Refactored codes according to the changes.
Added OrderBy (Ascending, Descending) dtos in place of using bool.
Removed default method arguments of service classes.
Changed Pay for Invoice function to only changed time.
Changed PaidAmount to GrandTotal, served as amount needed to be paid.
Added to InvoiceCreate DTO, IsPaid property for whether should create invoice with Paid status.
Updated docker files.

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.8'
 
 services:
   webapi:
@@ -6,7 +6,9 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - MongoConnection__ConnectionString=mongodb://database:27017
     ports:
-      - "5000:80"
+      - "21080:8080"
   database:
     ports:
       - "27017:27017"
+    volumes:
+      - ~/volumes/inventoice:/data/db
