--- a/src/WebAPI/Properties/launchSettings.json
+++ b/src/WebAPI/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5154"
+      "applicationUrl": "http://*:21080"
     },
     "IIS Express": {
       "commandName": "IISExpress",
