feat: Add Count of search request. Minor changes to code. Add deploy scripts.
Changed all DateTime.Now to UtcNow to store time invariant culture.

[Application]
Added search for authorName in Report-repositories.
Added CountAsync to repositories to count of found documents like SearchAsync.
Removed rethrow statement from services.

[Infrastructure]
Added filter of authorName for Report-repositories.
Changed filter of string now case insentitive.
Added CountAsync to repositories.
Fixed Invoice Search missing check for deleted.

[WebAPI]
Added Count endpoints for controllers.
Added ExceptionHandler middlewares.
Note: UseExceptionHandler required default handler for handlers return false, I use no-op here.
Removed catch exception statements from controllers.
Added authorName query for Report-controllers.
Removed console logging.

[Docker]
Added timezone environment variable to webapi service.
Added depends_on to webapi service.
Added production docker compose file.
Changed development docker compose file.
Added scripts for create and run first time for both environments.
Added scripts for deploy changes for both environments.

--- a/src/docker-compose.prod.yml
+++ b/src/docker-compose.prod.yml
@@ -1,20 +1,23 @@
 version: '3.8'
-name: inventoice-dev
+name: inventoice
 
 services:
   webapi:
+    container_name: inventoice-webapi
+    restart: unless-stopped
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
       - MongoConnection__ConnectionString=mongodb://database:27017
       - TZ=Asia/Ho_Chi_Minh
     ports:
       - "21080:8080"
   database:
+    container_name: inventoice-database
+    restart: unless-stopped
     ports:
-      - "27017:27017"
+      - "27017"
     volumes:
-      - inventoice-dev:/data/db
+      - inventoice:/data/db
 
 volumes:
-  inventoice-dev:
+  inventoice:
     external: true
