--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,5 +6,7 @@ services:
     build:
       context: .
       dockerfile: WebAPI/Dockerfile
+    depends_on:
+      - database
   database:
     image: mongo:latest
