--- a/src/WebAPI/Properties/launchSettings.json
+++ b/src/WebAPI/Properties/launchSettings.json
@@ -5,7 +5,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MongoConnection__ConnectionString": "mongodb://192.168.0.6:27017"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://*:21080"
